# DoplarrChaptarr-Rust

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSING.md  MIGRATING.md  README.md  README_DEVELOPER.md  RUST_MIGRATION.md  config.example.toml  docker-compose.yml  flake.nix  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  enhancement.yml
.github/ci/: chaptarr_mock.py  smoke-config.toml  smoke-image.sh
.github/workflows/: ci.yml  release.yml
docs/chaptarr/: COMPATIBILITY.md  RELEASE_CHECKLIST.md
doplarr/: Cargo.toml  build.rs
doplarr/src/: args.rs  config.rs  discord.rs  main.rs  startup.rs
doplarr/src/providers/: chaptarr.rs  mod.rs  radarr.rs  seerr.rs  sonarr.rs
doplarr/src/providers/chaptarr/: models.rs  selection.rs
doplarr/tests/fixtures/chaptarr/: author.json  book_available.json  book_placeholder.json  book_processing.json  book_unmonitored.json  command_response.json  edition_formats.json  lookup.json  lookup_audiobook_projection.json  metadata_profiles.json  openlibrary_search.json  post_book_response.json  quality_profiles.json  root_folders.json  root_folders_nested.json  system_status.json
radarr_api/: Cargo.toml
seerr_api/: Cargo.toml
sonarr_api/: Cargo.toml
sonarr_api/src/: commands.rs
