[workspace]
members = ["doplarr", "radarr_api", "sonarr_api", "seerr_api"]
resolver = "3"

[workspace.package]
version = "4.6.1-chaptarr.1"
edition = "2024"
license = "GPL-3.0-only"
authors = ["Elisha Lucero <ebriellelucero@gmail.com>"]
repository = "https://github.com/elbrielle/DoplarrChaptarr-Rust"
rust-version = "1.96"

[workspace.metadata.crane]
name = "doplarr"
