[package]
name = "doplarr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Discord media requests with Chaptarr ebook and audiobook support"

[dependencies]
anyhow = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
serde = "1"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "1"
async-trait = "0.1"

# Backend APIs
radarr_api = { path = "../radarr_api" }
sonarr_api = { path = "../sonarr_api" }
seerr_api = { path = "../seerr_api" }

# Discord libraries
twilight-http = { version = "0.17", default-features = false, features = [
  "rustls-platform-verifier",
] }
twilight-model = "0.17"
twilight-util = { version = "0.17", features = ["builder"] }
twilight-gateway = { version = "0.17", default-features = false, features = [
  "rustls-platform-verifier",
  "twilight-http",
] }
twilight-cache-inmemory = "0.17"
twilight-validate = "0.17"
